--- a/unimailhub/src/main/resources/templates/login.html
+++ b/unimailhub/src/main/resources/templates/login.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>UniMailHub Login</title>
+    <title>Login | UniMailHub</title>
+    <link rel="stylesheet" th:href="@{/css/auth.css}">
 </head>
 <body>
 
-<h2>Login</h2>
+<div class="auth-card">
+    <h2>UniMailHub Login</h2>
 
-<form method="post" action="/login">
-    <input type="email" name="email" placeholder="Email" required />
-    <br><br>
-    <input type="password" name="password" placeholder="Password" required />
-    <br><br>
-    <button type="submit">Login</button>
-</form>
+    <p th:if="${error}" th:text="${error}" class="error"></p>
 
-<p th:if="${error}" th:text="${error}" style="color:red"></p>
+    <form th:action="@{/login}" method="post">
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="password" name="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+    </form>
 
-<p>New user? <a href="/register">Register</a></p>
+    <p>
+        New user?
+        <a th:href="@{/register}">Register</a>
+    </p>
+</div>
 
 </body>
 </html>
