--- a/unimailhub/src/main/resources/templates/register.html
+++ b/unimailhub/src/main/resources/templates/register.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Register</title>
+    <title>Register | UniMailHub</title>
+    <link rel="stylesheet" th:href="@{/css/auth.css}">
 </head>
 <body>
 
-<h2>Register</h2>
+<div class="auth-card">
+    <h2>Create Account</h2>
 
-<form method="post" action="/register">
-    <input type="email" name="email" placeholder="Email" required />
-    <br><br>
-    <input type="password" name="password" placeholder="Password" required />
-    <br><br>
-    <button type="submit">Register</button>
-</form>
+    <p th:if="${error}" th:text="${error}" class="error"></p>
 
-<p th:if="${error}" th:text="${error}" style="color:red"></p>
+    <form th:action="@{/register}" method="post">
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="password" name="password" placeholder="Password" required />
+        <button type="submit">Register</button>
+    </form>
+
+    <p>
+        Already have an account?
+        <a th:href="@{/login}">Login</a>
+    </p>
+</div>
 
 </body>
 </html>
