--- a/unimailhub/src/main/resources/templates/home.html
+++ b/unimailhub/src/main/resources/templates/home.html
@@ -29,9 +29,14 @@
 
     <!-- ===== LEFT SIDEBAR ===== -->
     <div class="sidebar">
-        <h2 class="logo">UniMailHub</h2>
-
-        <ul class="menu">
+        
+        <div class="sidebar-logo">
+    <img th:src="@{/images/unimailhub-logo.png}"
+         alt="UniMailHub Logo"
+         class="sidebar-logo-img">
+    <span>UniMailHub</span>
+</div>
+                <ul class="menu">
             <li class="compose" onclick="openCompose()">✉ Compose</li>
 
             <li th:classappend="${activeTab}=='inbox' ? 'active'">
